# rust-matlab

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
.cargo/: config.toml
.github/workflows/: release.yml
gem3d/: Cargo.toml  LICENSE
gem3d/src/: dgem3d.rs  lib.rs
gemv3d/: Cargo.toml
gemv3d/src/: lib.rs
ito_double_integral_system/: Cargo.toml  README.md
ito_double_integral_system/src/: ito_integral.rs  lib.rs
lambert_2_15_additive/: Cargo.toml
lambert_2_15_additive/src/: lib.rs
lambert_2_15_mul/: Cargo.toml
lambert_2_15_mul/src/: lib.rs
lambert_3_15/: Cargo.toml
lambert_3_15/src/: lib.rs
landau_2_15/: Cargo.toml
landau_2_15/src/: lib.rs
lin_euler_maruyama_multi/: Cargo.toml
lin_euler_maruyama_multi/src/: lib.rs
lin_milstein_com/: Cargo.toml
lin_milstein_com/src/: lib.rs
lin_milstein_exp/: Cargo.toml
lin_milstein_exp/src/: lib.rs  taylor.rs
lin_taylor_2_1/: Cargo.toml  README.md
lin_taylor_2_1/src/: lib.rs
ll_ginzburg_landau/: Cargo.toml
ll_ginzburg_landau/src/: lib.rs
math_helpers/: Cargo.toml
math_helpers/benches/: scal_bench.rs
math_helpers/src/: daxpy.rs  detec_features.rs  dtri_maxmy.rs  dxpy.rs  lib.rs  matrix_exp_22.rs  scal.rs
math_helpers/src/daxpy/: avx.rs  fallback.rs  mod.rs  simd.rs
math_helpers/src/dgemm_2x2/: avx2.rs  fallback.rs  mod.rs  sse2.rs
math_helpers/src/dtri_maxmy/: avx.rs  fallback.rs  mod.rs  simd.rs
math_helpers/src/dxpy/: avx.rs  fallback.rs  mod.rs  simd.rs
math_helpers/src/scal/: avx.rs  fallback.rs  mod.rs  simd.rs
matlab_base_wrapper/: Cargo.toml  build.rs
matlab_base_wrapper/src/: lib.rs  mx.rs  raw.rs
matlab_blas_wrapper/: Cargo.toml  build.rs
matlab_blas_wrapper/src/: blas.rs
matlab_lapack_wrapper/: Cargo.toml  build.rs
matlab_lapack_wrapper/src/: helpers.rs  lapack.rs  lib.rs
rpade/: Cargo.toml  build.rs
rpade/src/: lib.rs
rpade_no_norm/: Cargo.toml  makefile
rpade_no_norm/src/: lib.rs
rpade_no_norm_2x2/: Cargo.toml  README.md
rpade_no_norm_2x2/src/: lib.rs
rpade_shared/: Cargo.toml
rpade_shared/src/: identity.rs  lib.rs  pade.rs  pade_triangular.rs
rpade_triangular/: Cargo.toml  README.md
rpade_triangular/src/: identity.rs  lib.rs
rpade_triangular_no_norm/: Cargo.toml
rpade_triangular_no_norm/src/: lib.rs
src/: lib.rs
src/helpers/: daxpy.rs  mod.rs  scal.rs
src/matlab_wrapper/: blas.rs  mex.rs  mod.rs  mx.rs  raw.rs
vander_pol_2_15_mix/: Cargo.toml
vander_pol_2_15_mix/src/: lib.rs
vander_pol_2_15_mul/: Cargo.toml
vander_pol_2_15_mul/src/: lib.rs
xtask/src/: main.rs
