[workspace]
resolver = "3"
members = [ "math_helpers", "matlab_base_wrapper",  "matlab_blas_wrapper", "matlab_lapack_wrapper","rpade_shared","rpade","rpade_no_norm","rpade_triangular","rpade_triangular_no_norm","gemv3d","lin_euler_maruyama_multi","lin_taylor_2_1","ito_double_integral_system", "xtask","ll_ginzburg_landau","ll_vanderpol"]



[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
# rustflags = ["-C", "target-cpu=native"]
