[workspace]
resolver = "3"
members = [
    "math_helpers",
    "matlab_base_wrapper",
    "matlab_blas_wrapper",
    "matlab_lapack_wrapper",
    "rpade_shared",
    "rpade",
    "rpade_no_norm",
    "rpade_triangular",
    "rpade_triangular_no_norm",
    "gem3d",
    "lin_euler_maruyama_multi",
    "lin_taylor_2_1",
    "ito_double_integral_system",
    "xtask",
    "lambert_2_15_additive",
    "rpade_no_norm_2x2",
    "vander_pol_2_15_mul",
    "lambert_2_15_mul",
    "vander_pol_2_15_mix",
    "landau_2_15",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["Frank S. Naranjo"]
license = "Apache-2.0"
repository = "https://github.com/fsnaranjo/rust_matlab"
keywords = ["matlab", "stochastic", "integration"]
description = "A collection of stochastic differential equation and related mathematical tools implemented in Rust, with interfaces to MATLAB."

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
# rustflags = ["-C", "target-cpu=native"]
