[package]
name = "lin_euler_maruyama_multi"
version.workspace = true
edition.workspace = true

[dependencies]
matlab_base_wrapper = { path = "../matlab_base_wrapper" }
matlab_blas_wrapper = { path = "../matlab_blas_wrapper" }
math_helpers = { path = "../math_helpers" }


[lib]
crate-type = ["dylib"]
