[package]
name = "rpade"
version = "0.1.0"
edition = "2024"

[dependencies]
matlab_base_wrapper = {path = "../matlab_base_wrapper"}
matlab_blas_wrapper = {path = "../matlab_blas_wrapper"}
matlab_lapack_wrapper = {path = "../matlab_lapack_wrapper"}
math_helpers ={ path = "../math_helpers"}

[profile.release]
opt-level = 3

[lib]
crate-type=["dylib"]