[package]
name = "rpade_no_norm"
version = "0.1.0"
edition = "2024"

[dependencies]
matlab_base_wrapper = {path = "../matlab_base_wrapper"}
matlab_lapack_wrapper = {path = "../matlab_lapack_wrapper"}
math_helpers ={ path = "../math_helpers"}
rpade_shared={ path = "../rpade_shared"}


[lib]
crate-type=["dylib"]