[package]
name = "rpade_shared"
version.workspace = true
edition.workspace = true

[dependencies]
matlab_base_wrapper = { path = "../matlab_base_wrapper" }
matlab_blas_wrapper = { path = "../matlab_blas_wrapper" }
matlab_lapack_wrapper = { path = "../matlab_lapack_wrapper" }
math_helpers = { path = "../math_helpers" }
