[package]
name = "rpade_triangular_no_norm"
version.workspace = true
edition.workspace = true

[dependencies]
matlab_base_wrapper = { path = "../matlab_base_wrapper" }
matlab_lapack_wrapper = { path = "../matlab_lapack_wrapper" }
math_helpers = { path = "../math_helpers" }
rpade_shared = { path = "../rpade_shared" }

[lib]
crate-type = ["dylib"]
